# swap-it

./: .gitignore  CMakeLists.txt  README.md
include/: global.h
include/assets/: texture.h
include/components/: mvp.h  position.h  velocity.h
include/core/: app.h  time_manager.h  window_manager.h
include/events/: events.h  input_events.h
include/systems/: movement_system.h  render_system.h  spawn_system.h
include/utils/: color.h  random.h  utils.h
src/: main.cc
src/assets/: texture.cc
src/components/: mvp.cc  position.cc  velocity.cc
src/core/: app.cc  window_manager.cc
src/systems/: movement_system.cc  render_system.cc  spawn_system.cc
src/utils/: color.cc  random.cc
